--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
                 <div class="row about-info wide" data-animate-block>
 
                     <div class="column lg-6 md-12 about-info__pic-block">
-                        <img src="images/about-photo.jpg"
-                            srcset="images/about-photo.jpeg 1x, images/about-photo@2x.jpg 2x" alt=""
+                        <img src="images/about-photo.jpg" alt=""
                             class="about-info__pic" data-animate-el>
                     </div>
 
