--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                 <div class="row about-info wide" data-animate-block>
 
                     <div class="column lg-6 md-12 about-info__pic-block">
-                        <img src="images/about-photo.jpg" alt=""
+                        <img src="images/about-photo.jpeg"
+                             alt=""
                             class="about-info__pic" data-animate-el>
                     </div>
 
