--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                     <div class="column lg-6 md-12 about-info__pic-block">
                         <img src="images/about-photo.jpeg"
-                             alt=""
+                            srcset="images/about-photo.jpeg 1x, images/about-photo.jpeg 2x" alt=""
                             class="about-info__pic" data-animate-el>
                     </div>
 
